--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/CMinusCompiler.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jflex-1.6.0.jar=C:\\jflex-1.6.0\\lib\\jflex-1.6.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jflex-1.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -66,7 +68,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=cminuscompiler.CMinusScanner
+main.class=cminuscompiler.JFlexScanner
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
