--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -68,7 +68,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=cminuscompiler.JFlexScanner
+main.class=cminuscompiler.CMinusCompiler
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
